opam-version: "2.0"
name: "ocplib-endian"
synopsis: "Optimised functions to read and write int16/32/64 from strings and bigarrays"
description: """
The library implements three modules:
* [EndianString](https://github.com/OCamlPro/ocplib-endian/blob/master/src/endianString.mli) works directly on strings, and provides submodules BigEndian and LittleEndian, with their unsafe counter-parts;
* [EndianBytes](https://github.com/OCamlPro/ocplib-endian/blob/master/src/endianBytes.mli) works directly on bytes, and provides submodules BigEndian and LittleEndian, with their unsafe counter-parts;
* [EndianBigstring](https://github.com/OCamlPro/ocplib-endian/blob/master/src/endianBigstring.mli) works on bigstrings (Bigarrays of chars), and provides submodules BigEndian and LittleEndian, with their unsafe counter-parts.
"""
maintainer: "pierre.chambart@ocamlpro.com"
authors: "Pierre Chambart"
homepage: "https://github.com/OCamlPro/ocplib-endian"
bug-reports: "https://github.com/OCamlPro/ocplib-endian/issues"
depends: [
  "base-bytes"
  "ocaml" {>= "4.02.3"}
  "cppo" {>= "1.1.0" & build}
  "dune" {>= "1.0"}
  "bigarray-compat"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/OCamlPro/ocplib-endian.git"
url {
  src: "https://github.com/OCamlPro/ocplib-endian/archive/1.0.tar.gz"
}
